Compiler/tests/semantics/fail/numero_linea_correcto_error_for.java
// Ahora se muestra correctamente el numero de linea en los errores de las sentencias for.

class Test {
	static void main()
	var int i;
	{
		for (i = 0; "will fail"; i + 1) {
		
		}
	}
}